--- a/bach_main_file.ipynb
+++ b/bach_main_file.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,24 +12,38 @@
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "import re"
+    "import re\n",
+    "from datetime import datetime"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Importing the dataset\n",
     "datadir = \"data/tidy_data\"\n",
-    "\n",
     "data = os.path.join(datadir, \"coded_injuries.csv\")\n",
-    "df_injuries = pd.read_csv(data)"
+    "df_injuries = pd.read_csv(data)\n",
+    "\n",
+    "# Function for converting date format from American to ISO formatting\n",
+    "def date_coversion(date):\n",
+    "    date_object = datetime.strptime(date, '%m-%d-%Y')\n",
+    "    iso_format_date = date_object.strftime('%Y-%m-%d')\n",
+    "    return iso_format_date\n",
+    "\n",
+    "# Changing date formatting\n",
+    "df_injuries.drop(columns = [\"DateOfReturn\", \"ReportedDate\"], inplace = True)\n",
+    "df_injuries[\"ProblemDate\"] = df_injuries[\"ProblemDate\"].str.replace(\"/\", \"-\").apply(date_coversion)\n",
+    "\n",
+    "# Filling NA's\n",
+    "df_injuries[\"Side\"] = df_injuries[\"Side\"].fillna(\"Does Not Apply\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -56,8 +70,6 @@
        "      <th>Code</th>\n",
        "      <th>Organizations</th>\n",
        "      <th>ProblemDate</th>\n",
-       "      <th>DateOfReturn</th>\n",
-       "      <th>ReportedDate</th>\n",
        "      <th>BodyPart</th>\n",
        "      <th>AffectedArea</th>\n",
        "      <th>Side</th>\n",
@@ -71,9 +83,7 @@
        "      <th>0</th>\n",
        "      <td>FB64</td>\n",
        "      <td>Football</td>\n",
-       "      <td>8/10/2023</td>\n",
-       "      <td>-</td>\n",
-       "      <td>8/15/2023</td>\n",
+       "      <td>2023-08-10</td>\n",
        "      <td>Shoulder</td>\n",
        "      <td>Upper Extremity</td>\n",
        "      <td>Left</td>\n",
@@ -85,9 +95,7 @@
        "      <th>1</th>\n",
        "      <td>FB29</td>\n",
        "      <td>Football</td>\n",
-       "      <td>8/11/2023</td>\n",
-       "      <td>-</td>\n",
-       "      <td>8/15/2023</td>\n",
+       "      <td>2023-08-11</td>\n",
        "      <td>Thigh</td>\n",
        "      <td>Lower Extremity</td>\n",
        "      <td>Left</td>\n",
@@ -99,9 +107,7 @@
        "      <th>2</th>\n",
        "      <td>FB74</td>\n",
        "      <td>Football</td>\n",
-       "      <td>8/12/2023</td>\n",
-       "      <td>-</td>\n",
-       "      <td>8/15/2023</td>\n",
+       "      <td>2023-08-12</td>\n",
        "      <td>Elbow</td>\n",
        "      <td>Upper Extremity</td>\n",
        "      <td>Right</td>\n",
@@ -113,9 +119,7 @@
        "      <th>3</th>\n",
        "      <td>FB46</td>\n",
        "      <td>Football</td>\n",
-       "      <td>8/14/2023</td>\n",
-       "      <td>-</td>\n",
-       "      <td>8/26/2023</td>\n",
+       "      <td>2023-08-14</td>\n",
        "      <td>Thigh</td>\n",
        "      <td>Lower Extremity</td>\n",
        "      <td>Left</td>\n",
@@ -127,9 +131,7 @@
        "      <th>4</th>\n",
        "      <td>FB24</td>\n",
        "      <td>Football</td>\n",
-       "      <td>8/17/2023</td>\n",
-       "      <td>-</td>\n",
-       "      <td>8/26/2023</td>\n",
+       "      <td>2023-08-17</td>\n",
        "      <td>Knee</td>\n",
        "      <td>Lower Extremity</td>\n",
        "      <td>Right</td>\n",
@@ -141,9 +143,7 @@
        "      <th>5</th>\n",
        "      <td>VB13</td>\n",
        "      <td>Volleyball</td>\n",
-       "      <td>8/18/2023</td>\n",
-       "      <td>8/18/2023</td>\n",
-       "      <td>8/23/2023</td>\n",
+       "      <td>2023-08-18</td>\n",
        "      <td>Wrist</td>\n",
        "      <td>Upper Extremity</td>\n",
        "      <td>Left</td>\n",
@@ -155,9 +155,7 @@
        "      <th>6</th>\n",
        "      <td>WSOC6</td>\n",
        "      <td>Womens Soccer</td>\n",
-       "      <td>8/18/2023</td>\n",
-       "      <td>-</td>\n",
-       "      <td>9/13/2023</td>\n",
+       "      <td>2023-08-18</td>\n",
        "      <td>Knee</td>\n",
        "      <td>Lower Extremity</td>\n",
        "      <td>Left</td>\n",
@@ -169,9 +167,7 @@
        "      <th>7</th>\n",
        "      <td>MSCO7</td>\n",
        "      <td>Men's Soccer</td>\n",
-       "      <td>8/19/2023</td>\n",
-       "      <td>-</td>\n",
-       "      <td>8/23/2023</td>\n",
+       "      <td>2023-08-19</td>\n",
        "      <td>Hip</td>\n",
        "      <td>Lower Extremity</td>\n",
        "      <td>Left</td>\n",
@@ -183,9 +179,7 @@
        "      <th>8</th>\n",
        "      <td>FB16</td>\n",
        "      <td>Football</td>\n",
-       "      <td>8/20/2023</td>\n",
-       "      <td>-</td>\n",
-       "      <td>8/26/2023</td>\n",
+       "      <td>2023-08-20</td>\n",
        "      <td>Shoulder</td>\n",
        "      <td>Upper Extremity</td>\n",
        "      <td>Left</td>\n",
@@ -197,9 +191,7 @@
        "      <th>9</th>\n",
        "      <td>SB2</td>\n",
        "      <td>Softball</td>\n",
-       "      <td>8/20/2023</td>\n",
-       "      <td>8/19/2023</td>\n",
-       "      <td>8/22/2023</td>\n",
+       "      <td>2023-08-20</td>\n",
        "      <td>Shoulder</td>\n",
        "      <td>Upper Extremity</td>\n",
        "      <td>Right</td>\n",
@@ -212,65 +204,51 @@
        "</div>"
       ],
       "text/plain": [
-       "    Code  Organizations ProblemDate DateOfReturn ReportedDate  BodyPart  \\\n",
-       "0   FB64       Football   8/10/2023            -    8/15/2023  Shoulder   \n",
-       "1   FB29       Football   8/11/2023            -    8/15/2023     Thigh   \n",
-       "2   FB74       Football   8/12/2023            -    8/15/2023     Elbow   \n",
-       "3   FB46       Football   8/14/2023            -    8/26/2023     Thigh   \n",
-       "4   FB24       Football   8/17/2023            -    8/26/2023      Knee   \n",
-       "5   VB13     Volleyball   8/18/2023    8/18/2023    8/23/2023     Wrist   \n",
-       "6  WSOC6  Womens Soccer   8/18/2023            -    9/13/2023      Knee   \n",
-       "7  MSCO7   Men's Soccer   8/19/2023            -    8/23/2023       Hip   \n",
-       "8   FB16       Football   8/20/2023            -    8/26/2023  Shoulder   \n",
-       "9    SB2       Softball   8/20/2023    8/19/2023    8/22/2023  Shoulder   \n",
+       "    Code  Organizations ProblemDate  BodyPart     AffectedArea   Side  \\\n",
+       "0   FB64       Football  2023-08-10  Shoulder  Upper Extremity   Left   \n",
+       "1   FB29       Football  2023-08-11     Thigh  Lower Extremity   Left   \n",
+       "2   FB74       Football  2023-08-12     Elbow  Upper Extremity  Right   \n",
+       "3   FB46       Football  2023-08-14     Thigh  Lower Extremity   Left   \n",
+       "4   FB24       Football  2023-08-17      Knee  Lower Extremity  Right   \n",
+       "5   VB13     Volleyball  2023-08-18     Wrist  Upper Extremity   Left   \n",
+       "6  WSOC6  Womens Soccer  2023-08-18      Knee  Lower Extremity   Left   \n",
+       "7  MSCO7   Men's Soccer  2023-08-19       Hip  Lower Extremity   Left   \n",
+       "8   FB16       Football  2023-08-20  Shoulder  Upper Extremity   Left   \n",
+       "9    SB2       Softball  2023-08-20  Shoulder  Upper Extremity  Right   \n",
        "\n",
-       "      AffectedArea   Side                              InjuryType  \\\n",
-       "0  Upper Extremity   Left                   Other Shoulder Injury   \n",
-       "1  Lower Extremity   Left                                  Strain   \n",
-       "2  Upper Extremity  Right   Entrapment Neuropathy (javelin elbow)   \n",
-       "3  Lower Extremity   Left                                  Strain   \n",
-       "4  Lower Extremity  Right                                  Sprain   \n",
-       "5  Upper Extremity   Left  Triangular Fibrocartilage Complex Tear   \n",
-       "6  Lower Extremity   Left                       Other Knee Injury   \n",
-       "7  Lower Extremity   Left                                  Strain   \n",
-       "8  Upper Extremity   Left                             Subluxation   \n",
-       "9  Upper Extremity  Right                                  Strain   \n",
+       "                               InjuryType                BodyPartName  \\\n",
+       "0                   Other Shoulder Injury                         NaN   \n",
+       "1                                  Strain    Hamstring (partial tear)   \n",
+       "2   Entrapment Neuropathy (javelin elbow)                         NaN   \n",
+       "3                                  Strain    Hamstring (partial tear)   \n",
+       "4                                  Sprain  Anterior Cruciate Ligament   \n",
+       "5  Triangular Fibrocartilage Complex Tear                         NaN   \n",
+       "6                       Other Knee Injury                         NaN   \n",
+       "7                                  Strain                 Psoas major   \n",
+       "8                             Subluxation                         NaN   \n",
+       "9                                  Strain        General Rotator Cuff   \n",
        "\n",
-       "                 BodyPartName                  CurrentStatus  \n",
-       "0                         NaN                    Not Cleared  \n",
-       "1    Hamstring (partial tear)               Limited Activity  \n",
-       "2                         NaN               Limited Activity  \n",
-       "3    Hamstring (partial tear)               Limited Activity  \n",
-       "4  Anterior Cruciate Ligament                    Not Cleared  \n",
-       "5                         NaN  Returned To Play As Tolerated  \n",
-       "6                         NaN               Limited Activity  \n",
-       "7                 Psoas major    Returned To Play and Closed  \n",
-       "8                         NaN  Returned To Play As Tolerated  \n",
-       "9        General Rotator Cuff  Returned To Play As Tolerated  "
+       "                   CurrentStatus  \n",
+       "0                    Not Cleared  \n",
+       "1               Limited Activity  \n",
+       "2               Limited Activity  \n",
+       "3               Limited Activity  \n",
+       "4                    Not Cleared  \n",
+       "5  Returned To Play As Tolerated  \n",
+       "6               Limited Activity  \n",
+       "7    Returned To Play and Closed  \n",
+       "8  Returned To Play As Tolerated  \n",
+       "9  Returned To Play As Tolerated  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Displaying the first 10 rows\n",
     "df_injuries.head(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Changing date formatting\n",
-    "df_injuries[\"ProblemDate\"] = df_injuries[\"ProblemDate\"].str.replace(\"/\", \"-\")\n",
-    "df_injuries[\"DateOfReturn\"] = df_injuries[\"DateOfReturn\"].str.replace(\"/\", \"-\")\n",
-    "df_injuries[\"ReportedDate\"] = df_injuries[\"ReportedDate\"].str.replace(\"/\", \"-\")\n",
-    "\n",
-    "# Filling NA's\n",
-    "df_injuries[\"Side\"] = df_injuries[\"Side\"].fillna(\"Does Not Apply\")"
    ]
   },
   {
@@ -374,6 +352,8 @@
    "source": [
     "# Summary count for sport groups\n",
     "sport_group = df_injuries.groupby(\"Organizations\").count().filter([\"Code\"]).rename(columns = {\"Code\": \"Count\"}).sort_values(by = \"Count\", ascending = False)\n",
+    "\n",
+    "# Displaying the top 10 highest count\n",
     "sport_group.head(10)"
    ]
   },
@@ -478,6 +458,8 @@
    "source": [
     "# Summary count for body part groups\n",
     "body_part_group = df_injuries.groupby(\"BodyPart\").count().filter([\"Code\"]).rename(columns = {\"Code\": \"Count\"}).sort_values(by = \"Count\", ascending = False)\n",
+    "\n",
+    "# Displaying the top 10 highest count\n",
     "body_part_group.head(10)"
    ]
   },
@@ -582,6 +564,8 @@
    "source": [
     "# Summary count for injury type groups\n",
     "injury_group = df_injuries.groupby(\"InjuryType\").count().filter([\"Code\"]).rename(columns = {\"Code\": \"Count\"}).sort_values(by = \"Count\", ascending = False)\n",
+    "\n",
+    "# Displaying the top 10 highest count\n",
     "injury_group.head(10)"
    ]
   },
@@ -661,6 +645,8 @@
    "source": [
     "# Summary count for recovery status groups\n",
     "recovery_group = df_injuries.groupby(\"CurrentStatus\").count().filter([\"Code\"]).rename(columns = {\"Code\": \"Count\"}).sort_values(by = \"Count\", ascending = False)\n",
+    "\n",
+    "# Displaying the top 10 highest count\n",
     "recovery_group.head(10)"
    ]
   },
